--- a/Diplom_project/src/main/webapp/WEB-INF/views/masterPage/masters.html
+++ b/Diplom_project/src/main/webapp/WEB-INF/views/masterPage/masters.html
@@ -2,7 +2,7 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="windows-1251">
-  <title>Услуги</title>
+  <title>Наши мастера</title>
   <link rel="stylesheet" href="/static/style.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -53,6 +53,9 @@
     </tr>
   </table>
 </div>
+
+<div class="container mt-5 my-2">
+  <a href="/masters/new">Добавить мастера</a> </div>
 
 <div>
   <p> <a class="text-white">1</a> </p>
