--- a/Diplom_project/src/main/webapp/WEB-INF/views/mainPage/about.html
+++ b/Diplom_project/src/main/webapp/WEB-INF/views/mainPage/about.html
@@ -35,6 +35,9 @@
             <li class="nav-item mx-4">
                 <a class="nav-link text-white" href="/contacts"> онтакты</a>
             </li>
+            <li class="nav-item mx-4">
+                <a class="nav-link text-white" href="/slots/new">ќставить за€вку</a>
+            </li>
         </ul>
     </div>
 </nav>
@@ -52,6 +55,16 @@
 
     <p class="text-justify">Ќе в угоду моде, а по собственным морально-этическим и профессиональным убеждени€м мы особым образом утилизируем используемые расходные материалы, примен€емые, например, в косметологии. Ёто позвол€ет сохранить окружающую среду, экологию, баланс. Ќе менее пристально мы относимс€ к дезинфекции всех используемых в работе инструментов и помещений. ¬едь мы несЄм ответственность не только за облик и стиль, но и за здоровье наших уважаемых клиентов.</p>
 </div>
+
+<div>
+    <p> <a class="text-white">1</a> </p>
+</div>
+
+<div>
+    <p> <a class="text-white">1</a> </p>
+</div>
+
+
 <nav class="navbar navbar-expand-sm bg-dark navbar-light fixed-bottom justify-content-center">
     <ul class="navbar-nav text-white" >
         <p class="text-center">–азработано студией " ривые ручки" по заказу правительства рептилоидов в 2021 году </p>
