--- a/Diplom_project/src/main/webapp/WEB-INF/views/mainPage/contacts.html
+++ b/Diplom_project/src/main/webapp/WEB-INF/views/mainPage/contacts.html
@@ -35,13 +35,16 @@
       <li class="nav-item mx-4">
         <a class="nav-link text-white" href="/contacts">Контакты</a>
       </li>
+      <li class="nav-item mx-4">
+        <a class="nav-link text-white" href="/slots/new">Оставить заявку</a>
+      </li>
     </ul>
   </div>
 </nav>
 <div class="container my-5">
   <p class="text-justify">Адрес: Россия, г. Казань, Улица Гладиаторская, 38\2, вход со двора, метро Кремлевская</p>
 
-  <p class="text-justify">Мы работаем с 10:00 до 22:00, без выходных.</p>
+  <p class="text-justify">Мы работаем с 10:00 до 20:00, без выходных.</p>
 
   <p class="text-justify">Телефон: +7 (987) 654-32-10</p>
 
@@ -51,6 +54,11 @@
 
 
 </div>
+
+<div>
+  <p> <a class="text-white">1</a> </p>
+</div>
+
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-light fixed-bottom justify-content-center">
   <ul class="navbar-nav text-white" >
