--- a/Diplom_project/src/main/webapp/WEB-INF/views/servicesPage/show.html
+++ b/Diplom_project/src/main/webapp/WEB-INF/views/servicesPage/show.html
@@ -35,6 +35,9 @@
             <li class="nav-item mx-4">
                 <a class="nav-link text-white" href="/contacts">Контакты</a>
             </li>
+            <li class="nav-item mx-4">
+                <a class="nav-link text-white" href="/slots/new">Оставить заявку</a>
+            </li>
         </ul>
     </div>
 </nav>
@@ -42,6 +45,11 @@
 <p th:text="${'Услуга: ' + serviceNu.getName()}">VALUE</p>
 <p th:text="${'Стоимость: ' + serviceNu.getCost()}">VALUE</p>
 <p th:text="${'Описание: ' + serviceNu.getDescription()}">VALUE</p>
+</div>
+
+<div class="container my-1">
+    <form  th:method="GET" th:action="@{/services}">
+        <input type="submit" value="К списку услуг"/> </form>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-light fixed-bottom justify-content-center">
